--- a/Atividade_Semana4.ipynb
+++ b/Atividade_Semana4.ipynb
@@ -42,11 +42,11 @@
     "\n",
     "Tutoriais introdutórios de ROS:\n",
     "\n",
-    "[https://github.com/Insper/robot22.2/blob/main/guides/simulador_ros.md](https://github.com/Insper/robot22.2/blob/main/guides/simulador_ros.md)\n",
+    "[https://github.com/Insper/robot22.2/blob/master/guides/simulador_ros.md](https://github.com/Insper/robot22.2/blob/master/guides/simulador_ros.md)\n",
     "\n",
-    "[https://github.com/Insper/robot22.2/blob/main/guides/projeto_rospython.md](https://github.com/Insper/robot22.2/blob/main/guides/projeto_rospython.md)\n",
+    "[https://github.com/Insper/robot22.2/blob/master/guides/projeto_rospython.md](https://github.com/Insper/robot22.2/blob/master/guides/projeto_rospython.md)\n",
     "\n",
-    "[https://github.com/Insper/robot22.2/blob/main/guides/ros_topics.md](https://github.com/Insper/robot22.2/blob/main/guides/ros_topics.md)\n",
+    "[https://github.com/Insper/robot22.2/blob/master/guides/ros_topics.md](https://github.com/Insper/robot22.2/blob/master/guides/ros_topics.md)\n",
     "\n",
     "ROS Robot Programming - capítulos 5 e 6:\n",
     "https://community.robotsource.org/t/download-the-ros-robot-programming-book-for-free/51"
@@ -93,7 +93,7 @@
     "# Setup da infra\n",
     "\n",
     "\n",
-    "Faça um clone de [https://github.com/insper/robot22.1/](https://github.com/insper/robot22.1/) **dentro** de sua pasta `catkin_ws/src`.\n",
+    "Faça um clone de [https://github.com/Insper/robot22.2;](https://github.com/Insper/robot22.2/) **dentro** de sua pasta `catkin_ws/src`.\n",
     "\n",
     "    cd ~/catkin_ws/src\n",
     "    git clone https://github.com/insper/robot22.2/\n",
@@ -140,7 +140,7 @@
    "source": [
     "## Ex 1. Simulador\n",
     "\n",
-    "Siga o tutorial [https://github.com/Insper/robot22.2/blob/main/guides/simulador_ros.md](https://github.com/Insper/robot21.2/blob/main/guides/simulador_ros.md) para rodar o simulador.\n",
+    "Siga o tutorial [https://github.com/Insper/robot22.2/blob/master/guides/simulador_ros.md](https://github.com/Insper/robot22.2/blob/master/guides/simulador_ros.md) para rodar o simulador.\n",
     "\n",
     "**i.** Escreva aqui o comando para rodar a simulação"
    ]
@@ -279,7 +279,7 @@
     "\n",
     "Usando o simulador e o LIDAR simulado, faça um robô se afastar da parede quando o obstáculo bem à sua frente estiver a menos de $0.95 m$  e se aproximar quando estiver a mais de $1.05 m$ .\n",
     "\n",
-    "Baseie-se no código `le_scan.py` e `roda.py`, desenvolvidos [durante o tutorial](https://github.com/Insper/robot21.2/blob/master/guides/projeto_rospython.md)\n",
+    "Baseie-se no código `le_scan.py` e `roda.py`, desenvolvidos [durante o tutorial](https://github.com/Insper/robot22.2/blob/master/guides/projeto_rospython.md)\n",
     "\n",
     "Trabalhe na pasta `aps4/scripts` no arquivo `indeciso.py`\n",
     "\n",
@@ -367,7 +367,7 @@
     "\n",
     "\n",
     "#### Quando for criar seu próprio projeto...\n",
-    "... o jeito sugerido de trabalhar é criar um projeto no Github, clonar seu Github *dentro* do `catkin_ws/src`  e criar um projeto ROS dentro dele, com `catkin_create_pkg`, como explicado [aqui](https://github.com/Insper/robot22.2/blob/main/guides/projeto_rospython.md).\n",
+    "... o jeito sugerido de trabalhar é criar um projeto no Github, clonar seu Github *dentro* do `catkin_ws/src`  e criar um projeto ROS dentro dele, com `catkin_create_pkg`, como explicado [aqui](https://github.com/Insper/robot22.2/blob/master/guides/projeto_rospython.md).\n",
     "\n",
     "No seu gerenciador de arquivos do Linux, deve ficar assim:\n",
     "\n",
