--- a/Atividade_Semana4.ipynb
+++ b/Atividade_Semana4.ipynb
@@ -315,7 +315,7 @@
    },
    "source": [
     "\n",
-    "## Ex. 5 Desafio!\n",
+    "## Ex. 6 - precisa entregar!\n",
     "\n",
     "Estude o código de `cor.py`, que está em `aps4/scripts` Você pode começar executando este programa.\n",
     "\n",
